--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
     "react-highlight-words": "0.14.0",
-    "react-scripts": "2.0.3"
+    "react-scripts": "2.0.3",
+    "styled-components": "^4.0.3"
   },
   "devDependencies": {},
   "scripts": {
